tareas personales modulo 4

--- a/Biografia.html
+++ b/Biografia.html
@@ -13,5 +13,7 @@
     <br><br>
     <h3>Nacimiento</h3>
     <p>Nació en 4 de febrero de 1967, en la ciudad de caracas, eso ocurrió un día sabado a las 12 de mediodía.</p>
+    <br><h2>Estudios</h2>
+    
 </body>
 </html>
